# upscaler

./: .gitignore  CLAUDE.md  implementation_plan.md  pyproject.toml  pytest.ini  requirements.txt  test_inputs.sh  upscale.py
docs/: setup.md  testing.md  ui_design_plan.md  ui_wireframes.md  usage.md
plans/: add-swin2sr-denoising.md  ui_implementation_roadmap.md
src/: denoise.py  models.py  upscale.py  utils.py
tests/: test_cli.py  test_integration.py  test_paths.py
