[project]
name = "upscaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "basicsr>=1.4.2",
    "black>=25.11.0",
    "facexlib>=0.3.0",
    "gfpgan>=1.3.8",
    "numpy>=2.0.2",
    "opencv-python>=4.13.0.92",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "realesrgan>=0.3.0",
    "torch>=2.8.0",
    "torchvision<=0.15.0",
    "tqdm>=4.67.3",
]
