[project]
name = "upscaler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "basicsr>=1.4.2",
    "black>=25.11.0",
    "facexlib>=0.3.0",
    "gfpgan>=1.3.8",
    "huggingface-hub>=0.16.0,<1.0",
    "numpy<2.0",
    "opencv-python<4.10",
    "pillow>=11.3.0",
    "pytest>=8.4.2",
    "realesrgan>=0.3.0",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "tqdm>=4.67.3",
    "transformers>=4.30.0,<4.36",
]
